# tcc-vs

./: .gitignore  Makefile  README  README.md  libtcc.c  libtcc.h  meson.build  meson.options  tccelf.c
.github/workflows/: build-meson.yml  build.yml
examples/: ex1-lib.c  meson.build
examples-lib/: ex1.c
lib/: meson.build
meson-include/: libtcc.h
